Fix production overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,11 +100,13 @@ body {
 }
 
 .char {
+	display: inline-block;
 	overflow-x: hidden;
 }
 
 .line,
 .char {
+	display: inline-block;
 	position: relative;
 	padding-bottom: 0.2em;
 	margin-bottom: -0.2em;
